fix: use Railway PORT env variable